2002-06-24  Rachel Hestilow  <hestilow@ximian.com>

	* gtk/FileSelection.custom: Remove random cruft that was
	at the beginning of this file.

2002-06-24  Rachel Hestilow  <hestilow@ximian.com>

	* glib/EnumWrapper.cs: New class which holds an enum int.
	
	* glib/Value.cs: Add support for glib enum types. We needed
	to use EnumWrapper for this because otherwise the int operator
	wouldn't know which glib function to use.
	
	* generator/BoxedGen.cs, ClassBase.cs, Ctor.cs, EnumGen.cs,
	InterfaceGen.cs, Method.cs, ObjectGen.cs, Signal.cs, StructGen.cs:
	Create more doc stubs.

	* generator/Property.cs: Generate enum values correctly.

	* generator/Ctor.cs: Refactor generation to honor metadata-specified
	collision preference.

	* parser/Gtk.metadata: Added constructor collision preferences to
	all known clashes.

	* parse/Gdk.metadata: Added (for Pixbuf clashes).
	
2002-06-24  Duncan Mak  <duncan@ximian.com>

	* glue/fileselection.c: New file, defines accessor functions to
	fields inside a GtkFileSelection.

	* gtk/FileSelection.custom: C# glue that makes use of new accessor
	functions defined in fileselection.c.
	
	* glue/Makefile.am: Added fileselection.c

2002-06-23  Rachel Hestilow  <hestilow@ximian.com>

	* glib/Object.cs, glib/SList.cs, glib/Value.cs, gtk/Application.cs:
	Move documentation to right before their actual methods, rather
	than the DllImported ones.

	* generator/Method.cs: Generate documentation before the actual
	method and not the DllImport.

2002-06-23  Rachel Hestilow  <hestilow@ximian.com>
	
	* generator/ClassBase.cs: Add accessors for methods and signals.
	Change GenSignals and GenMethods to public, as csc has a different
	idea of protected than mcs. Handle interface collisions in
	GenMethods.

	* generator/Method.cs: Add accessor Protection - "public" by default.

	* generator/ObjectGen.cs: Make sure wrapper's Signals hashtable only
	gets generated once. Generate a list of collisions for GenMethods.
	Remove dead foreach loop from Validate.
