@@ -81,6 +81,7 @@ pango/Makefile
 atk/Makefile
 gdk/Makefile
 gtk/Makefile
+gnome/Makefile
 sample/Makefile
 ])
 
