@@ -1,4 +1,4 @@
-DIRS=generator glib pango atk gdk gtk sample
+DIRS=generator glib pango atk gdk gtk gnome sample
 ROOT=/cygdrive/$(subst \,/,$(subst :\,/,$(SYSTEMROOT)))
 CSC=$(ROOT)/microsoft.net/framework/v1.0.3705/csc.exe
 MCS=mcs
