@@ -1,5 +1,16 @@
 2002-06-24  Rachel Hestilow  <hestilow@ximian.com>
 
+	* glib/UnwrappedObject.cs: New class which holds an IntPtr.
+	This is used in Value so that we can retrieve the IntPtr itself
+	for an object property.
+	
+	* glib/Value.cs: Add UnwrappedObject cast operator.
+
+	* glib/Property.cs: If the retrieved value is an object,
+	and there is no wrapper object, create a new one.
+
+2002-06-24  Rachel Hestilow  <hestilow@ximian.com>
+
 	* gtk/FileSelection.custom: Remove random cruft that was
 	at the beginning of this file.
 
